# Marina

./: .gitignore  CMakeLists.txt  README.md  build.sh  create_static_tables.py  requirements.txt
controller/: benchmark.c  check_config.h  config.h  controller.c  controller.h  dns_config.h  port_config.h  static_tables.h
controller/dataplane/: dataplane.c  dataplane.h  dp_api.c  dp_api.h  features.c  features.h  prepare_dataplane.c  prepare_dataplane.h
controller/datastructures/: bloom_filter.c  bloom_filter.h  dataplane_ringbuffer.c  dataplane_ringbuffer.h  dns_hashtable.c  dns_hashtable.h  dns_ringbuffer.c  dns_ringbuffer.h  flow_hashtable.c  flow_hashtable.h  heap.c  heap.h  mk_ringbuffer.h  packet_ringbuffer.c  packet_ringbuffer.h  session_hashtable.c  session_hashtable.h  structs.h
controller/datastructures/hashes/: crc.c  crc.h
controller/dns_db/: dns_db.c  dns_db.h
controller/evaluation/: dnsdb_eval.c  flowdb_bloom_eval.c  flowdb_eval.c  flowexport_eval.c  packet_handler_eval.c
controller/export/: export_features.c  export_features.h
controller/flow_db/: flow_db.c  flow_db.h
controller/logging/: logging.h  statistics.c  statistics.h
controller/packet_handler/: packet_handler.c  packet_handler.h
controller/runtime_config/: runtime_config.c  runtime_config.h
controller/tests/: mock_packets.h  mock_switch.c  test_crc.c  test_full_switch.c  test_hashtable.c  test_hashtable_multithreaded.c  test_heap.c  test_macros.h  test_pcap.c  test_ringbuffer.c  test_vector.c
p4/: config.p4  just_forward.p4  marina_data_plane.p4
p4/include/: bloomfilter.p4  classification.p4  features.p4  forward.p4  macros.p4  parser.p4
p4/include/features/: iat.p4  size.p4  tcp_retransmission.p4
p4/just_forward/: forward11.cmd  forward12.cmd
scripts/: bloomfilter.py  compute_log_table.py  extract_context.py
